--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 <body>
 <!-- Parallax -->
-  <div id="parallax2" class="parallax" style="background-image: url(images/mosaic.jpg);">
+  <div id="parallax2" class="parallax">
 
       <nav class="topnav" id="myTopnav">
           <a style="padding: 14px 16px;" href=""></a>
@@ -147,9 +147,9 @@
   </div>
 
 <!-- Parallax -->
-  <div id="parallax2" class="parallax" style="background-image: url(images/moon4.jpg);">
+  <div id="parallax2" class="parallax">
     <div style="position: relative; left:50px; top:200px; width:40%;">
-    <p id="moon" style="position: absolute; text-transform:uppercase; background-color:#282E34; width:100%; font-size: 18px; letter-spacing: 5px; padding: 20px;">
+    <p id="moon" style="position: absolute; text-transform:uppercase; background-color:#282E34; width:100%; letter-spacing: 5px; padding: 20px;">
       "I am the Alpha and the Omega,
          the First and the Last,
            the Beginning and the End."</p>
@@ -298,7 +298,7 @@
   </script>
 
 <!-- Parallax -->
-  <div id="parallax3" class="parallax" style="background-image: url(images/blur.jpg);">
+  <div id="parallax3" class="parallax">
 
 
 </body>
