--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           color: white;
         }
     @media screen and (max-width:770px){
+      html, body{overflow-x: hidden;}
 
       #parallax1{background-image: url(images/mosaic_small.jpg);}
       #parallax2{background-image: url(images/moon4_small.jpg);}
@@ -106,7 +107,7 @@
 
 <body>
 <!-- Parallax -->
-  <div id="parallax2" class="parallax">
+  <div id="parallax1" class="parallax">
 
       <nav class="topnav" id="myTopnav">
           <a style="padding: 14px 16px;" href=""></a>
