--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           color: white;
         }
     @media screen and (max-width:770px){
+      body{overflow-x: hidden}
       #parallax1{background-image: url(images/mosaic_small.jpg);}
       #parallax2{background-image: url(images/moon4_small.jpg);}
       #parallax3{background-image: url(images/blur_small.jpg);}
@@ -105,7 +106,7 @@
 
 <body>
 <!-- Parallax -->
-  <div id="parallax1" class="parallax">
+  <div class="parallax"  id="parallax1" >
 
       <nav class="topnav" id="myTopnav">
           <a style="padding: 14px 16px;" href=""></a>
