--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           color: white;
         }
     @media screen and (max-width:770px){
-      body{overflow-x: hidden}
+      .parallax{background-attachment: scroll}
       #parallax1{background-image: url(images/mosaic_small.jpg);}
       #parallax2{background-image: url(images/moon4_small.jpg);}
       #parallax3{background-image: url(images/blur_small.jpg);}
@@ -128,9 +128,10 @@
           }
       </script>
 
-    <div style="text-align: center; position: absolute; left:0; width:100%; top: 50%;">
-      <p style="text-transform:uppercase; background-color:#282E34; width:fit-content; text-align: center; font-size: 30px; letter-spacing: 10px; padding: 20px; margin:0 auto">welcome</p>
+    <div style="text-align: center; position: relative; width:100%; top: 25%;">
+      <p style="position: absolute; left:0; right:0; text-transform:uppercase; background-color:#282E34; width:fit-content; text-align: center; font-size: 30px; letter-spacing: 10px; padding: 20px; margin:0 auto">welcome</p>
     </div>
+
 
   </div>
 
