--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           color: white;
         }
     @media screen and (max-width:770px){
-      .parallax{background-attachment: scroll}
+      .parallax{background-attachment: initial}
       #parallax1{background-image: url(images/mosaic_small.jpg);}
       #parallax2{background-image: url(images/moon4_small.jpg);}
       #parallax3{background-image: url(images/blur_small.jpg);}
