--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           color: white;
         }
     @media screen and (max-width:770px){
+      body{overflow-x: hidden}
       .parallax{background-attachment: initial}
       #parallax1{background-image: url(images/mosaic_small.jpg);}
       #parallax2{background-image: url(images/moon4_small.jpg);}
