--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         }
     @media screen and (max-width:770px){
       html{overflow-x: hidden}
-      .parallax{background-attachment: initial}
+      .parallax{background-attachment: scroll}
       #parallax1{background-image: url(images/mosaic_small.jpg);}
       #parallax2{background-image: url(images/moon4_small.jpg);}
       #parallax3{background-image: url(images/blur_small.jpg);}
@@ -161,7 +161,7 @@
 <!-- Slide Show -->
   <div style="background-color: #282E34; height: 100px;"></div>
   <div style="background-color: #282E34;">
-    <div class="w3-content w3-display-container" style="height:350px;">
+    <div class="w3-content w3-display-container" style="height:350px; overflow:hidden">
       <img class="mySlides" src="images/img_nature_wide.jpg" style="z-Index:3">
       <img class="mySlides" src="images/img_fjords_wide.jpg" style="z-Index:2">
       <img class="mySlides" src="images/img_mountains_wide.jpg" style="z-Index:1">
