--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <style>
     html, body{width:100%; height: 100%; font-family: 'Lato', sans-serif; color: #ddd;}
     #parallax1{background-image: url(images/mosaic.jpg);}
-    #parallax2{background-image: url(images/moon4.jpg);}
-    #parallax3{background-image: url(images/blur.jpg);}
+    #parallax2{background-image: url(images/moon4.jpg); height: 110%}
+    #parallax3{background-image: url(images/blur.jpg); height: 110%}
     /* Navbar */
         .topnav {
           position: absolute;
