--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <style>
     html, body{width:100%; height: 100%; font-family: 'Lato', sans-serif; color: #ddd;}
-    #parallax1{background-image: url(images/mosaic.jpg);}
+    #parallax1{background-image: url(images/mosaic.jpg); width: 100%}
     #parallax2{background-image: url(images/moon4.jpg); height: 110%}
     #parallax3{background-image: url(images/blur.jpg); height: 110%}
     /* Navbar */
@@ -40,7 +40,7 @@
     @media screen and (max-width:770px){
 
       html{overflow-x: hidden}
-      .parallax{background-attachment: scroll; width: 100%;}
+      .parallax{background-attachment: scroll;}
       #parallax1{background-image: url(images/mosaic_small.jpg);}
       #parallax2{background-image: url(images/moon4_small.jpg);}
       #parallax3{background-image: url(images/blur_small.jpg);}
