--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         }
     @media screen and (max-width:770px){
 
-      html{overflow-x: hidden; overflow: scroll;
--webkit-overflow-scrolling: touch;}
+      html{overflow-x: hidden; }
+      body{overflow: scroll;-webkit-overflow-scrolling: touch;}
       .parallax{background-attachment: scroll; max-width: 100%}
       #parallax1{background-image: url(images/mosaic_small.jpg);}
       #parallax2{background-image: url(images/moon4_small.jpg);}
