--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     @media screen and (max-width:770px){
 
       html{overflow-x: hidden; overflow: scroll;}
-      body{overflow: scroll;-webkit-overflow-scrolling: touch;}
+      body{overflow: scroll;}
       .parallax{background-attachment: scroll; max-width: 100%}
       #parallax1{background-image: url(images/mosaic_small.jpg);}
       #parallax2{background-image: url(images/moon4_small.jpg);}
