--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         }
     @media screen and (max-width:770px){
 
-      html{overflow-x: hidden; overflow: scroll;}
+      html{overflow-x: hidden; overflow: auto;}
       body{overflow: scroll;}
       .parallax{background-attachment: scroll; max-width: 100%}
       #parallax1{background-image: url(images/mosaic_small.jpg);}
