--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     @media screen and (max-width:770px){
 
       html{overflow-x: hidden}
-      .parallax{background-attachment: scroll; max-width: 100%}
+      .parallax{background-attachment: scroll;}
       #parallax1{background-image: url(images/mosaic_small.jpg);}
       #parallax2{background-image: url(images/moon4_small.jpg);}
       #parallax3{background-image: url(images/blur_small.jpg);}
