--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
       #moon{
         font-size: 10px;
-        top:75px;
+        top:125px;
       }
 
     }
@@ -151,12 +151,12 @@
 
 <!-- Parallax -->
   <div id="parallax2" class="parallax">
-    <div style="position: relative; left:50px; top:200px; width:40%;">
-    <p id="moon" style="position: absolute; text-transform:uppercase; background-color:#282E34; width:100%; letter-spacing: 5px; padding: 20px;">
-      "I am the Alpha and the Omega,
-         the First and the Last,
-           the Beginning and the End."</p>
-    </div>
+    <div style="position: relative; left:50px; width:40%;">
+      <p id="moon" style="position: absolute; text-transform:uppercase; background-color:#282E34; width:100%; letter-spacing: 5px; padding: 20px;">
+        "I am the Alpha and the Omega,
+          the First and the Last,
+            the Beginning and the End."</p>
+      </div>
   </div>
   
 <!-- Slide Show -->
