--- a/index.html
+++ b/index.html
@@ -77,9 +77,12 @@
       }
 
       #moon{
-        font-size: 10px;
         top:400px;
       }
+
+      #moontext{
+        font-size: 10px;
+     }
 
     }
   </style>
@@ -151,8 +154,8 @@
 
 <!-- Parallax -->
   <div id="parallax2" class="parallax">
-    <div style="position: relative; left:50px; width:40%;">
-      <p id="moon" style="position: absolute; text-transform:uppercase; background-color:#282E34; width:100%; letter-spacing: 5px; padding: 20px;">
+    <div id="moon" style="position: relative; left:50px; width:40%;">
+      <p id="moontext" style="position: absolute; text-transform:uppercase; background-color:#282E34; width:100%; letter-spacing: 5px; padding: 20px;">
         "I am the Alpha and the Omega,
           the First and the Last,
             the Beginning and the End."</p>
