--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       html{overflow-x: hidden}
       .parallax{background-attachment: scroll;}
       #parallax1{background-image: url(images/mosaic_small.jpg);}
-      #parallax2{background-image: url(images/moon4_small.jpg);}
+      #parallax2{background-image: url(images/moon4_small2.jpg);}
       #parallax3{background-image: url(images/blur_small.jpg);}
 
       .topnav a:not(:last-child) {
@@ -77,7 +77,7 @@
       }
 
       #moon{
-        top:400px;
+        top:200px;
       }
 
       #moontext{
