--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
         text-align: left;
       }
 
+      .topnav a:hover {
+          background-color: initial;
+          color: initial;
+          text-shadow: initial;
+        }
+
       #moon{
         top:150px;
       }
