--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 
       .topnav a:hover {
           background-color: initial;
-          color: initial;
-          text-shadow: initial;
+          color: white;
+          text-shadow: 0px 0px 10px black;
         }
 
       #moon{
