--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     #parallax1{background-image: url(images/mosaic.jpg);}
     #parallax2{background-image: url(images/moon4.jpg); height: 110%}
     #parallax3{background-image: url(images/blur.jpg); height: 110%}
+    #welcome{top:50%;}
     /* Navbar */
         .topnav {
           position: absolute;
@@ -90,6 +91,10 @@
         font-size: 10px;
      }
 
+     #welcome{
+       top:25%;
+     }
+
     }
   </style>
 
@@ -139,7 +144,7 @@
           }
       </script>
 
-    <div style="text-align: center; position: relative; width:100%; top: 25%;">
+    <div id= "welcome" style="text-align: center; position: relative; left: 0">
       <p style="position: absolute; left:0; right:0; text-transform:uppercase; background-color:#282E34; width:fit-content; text-align: center; font-size: 30px; letter-spacing: 10px; padding: 20px; margin:0 auto">welcome</p>
     </div>
 
