--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
           }
       </script>
 
-    <div id= "welcome" style="text-align: center; position: relative; left: 0; width: 20%">
-      <p style="position: absolute; left:0; right:0; text-transform:uppercase; background-color:#282E34; text-align: center; font-size: 30px; letter-spacing: 10px; padding: 20px; margin:0 auto">welcome</p>
+    <div id= "welcome" style="text-align: center; position: relative; left: 0; background-color:#282E34">
+      <p style="position: absolute; left:0; right:0; text-transform:uppercase; background-color:#282E34; width:fit-content; text-align: center; font-size: 30px; letter-spacing: 10px; padding: 20px; margin:0 auto">welcome</p>
     </div>
 
 
