--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
        width: 70%;
      }
 
+     #wtext{
+      width: 70%;
+     }
+
     }
   </style>
 
@@ -146,7 +150,7 @@
       </script>
 
     <div id= "welcome" style="text-align: center; position: relative; left: 0; background-color:#282E34">
-      <p style="display: inline-block; position: absolute; left:0; right:0; text-transform:uppercase; background-color:#282E34; width:fit-content; text-align: center; font-size: 30px; letter-spacing: 10px; padding: 20px; margin:0 auto">welcome</p>
+      <p id = "wtext" style="display: inline-block; position: absolute; left:0; right:0; text-transform:uppercase; background-color:#282E34; width:fit-content; text-align: center; font-size: 30px; letter-spacing: 10px; padding: 20px; margin:0 auto">welcome</p>
     </div>
 
 
