--- a/index.html
+++ b/index.html
@@ -93,11 +93,6 @@
 
      #welcome{
        top:25%;
-       width: 70%;
-     }
-
-     #wtext{
-      width: 70%;
      }
 
     }
@@ -149,8 +144,8 @@
           }
       </script>
 
-    <div id= "welcome" style="text-align: center; position: relative; margin: 0 auto; background-color:#282E34">
-      <p id = "wtext" style="display: inline-block; position: absolute; left:0; right:0; text-transform:uppercase; background-color:#282E34; width:fit-content; text-align: center; font-size: 30px; letter-spacing: 10px; padding: 20px; margin:0 auto">welcome</p>
+    <div id= "welcome" style="text-align: center; position: relative; margin: 0 auto">
+      <p style="position: absolute; left:0; right:0; text-transform:uppercase; background-color:#282E34; width:fit-content; text-align: center; font-size: 30px; letter-spacing: 10px; padding: 20px; margin:0 auto">welcome</p>
     </div>
 
 
