--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           }
       </script>
 
-    <div id= "welcome" style="text-align: center; position: relative; margin: 0 auto; display:inline-block">
+    <div id= "welcome" style="text-align: center; position: relative; margin: 0 auto; display:block">
       <p style="position: absolute; left:0; right:0; text-transform:uppercase; background-color:#282E34; width:fit-content; text-align: center; font-size: 30px; letter-spacing: 10px; padding: 20px; margin:0 auto">welcome</p>
     </div>
 
