--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
       .topnav a.icon {
         position: absolute;
+        padding: 20px;
         right: 0;
         display: block;
       }
@@ -130,7 +131,7 @@
           <a href="">Photos</a>
           <a href="">About</a>
           <a href="">Contact</a>
-          <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction();">&#9776;</a>
+          <a href="javascript:void(0);" style="font-size:25px;" class="icon" onclick="myFunction();">&#9776;</a>
       </nav>
 
       <script>
@@ -147,7 +148,6 @@
     <div id= "welcome" style="text-align: center; position: relative; margin: 0 auto; display:block">
       <p style="position: absolute; left:0; right:0; text-transform:uppercase; background-color:#282E34; width:250px; text-align: center; font-size: 30px; letter-spacing: 10px; padding: 20px; margin:0 auto">welcome</p>
     </div>
-
 
   </div>
 
