--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           }
       </script>
 
-    <div id= "welcome" style="text-align: center; position: relative; margin: 0 auto; display:block">
+    <div id= "welcome" style="text-align: center; position: absolute; margin: 0 auto; display:block">
       <p style="position: absolute; left:0; right:0; text-transform:uppercase; background-color:#282E34; width:250px; text-align: center; font-size: 30px; letter-spacing: 10px; padding: 20px; margin:0 auto">welcome</p>
     </div>
 
