Changed skype bot container to div

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
 <body>
 <!-- Skype Bot -->
-  <span class="skype-button bubble " data-bot-id="2c2a7e41-040a-4fcd-b10a-2480ac3c488e"></span>
+  <div class="skype-button bubble " data-bot-id="2c2a7e41-040a-4fcd-b10a-2480ac3c488e"></div>
   <script src="https://swc.cdn.skype.com/sdk/v1/sdk.min.js"></script>
 <!-- Parallax/Navbar -->
   <div class="parallax"  id="parallax1" >
