--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <body>
 <!-- Skype Bot -->
   <div class="skype-button bubble " data-bot-id="2c2a7e41-040a-4fcd-b10a-2480ac3c488e"></div>
-  <script src="https://swc.cdn.skype.com/sdk/v1/sdk.min.js"></script>
+  <script src="https://latest-swc.cdn.skype.com/sdk/v1/sdk.min.js"></script>
 <!-- Parallax/Navbar -->
   <div class="parallax"  id="parallax1" >
 
