--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div class="skype-button bubble " data-bot-id="2c2a7e41-040a-4fcd-b10a-2480ac3c488e"></div>
   <script src="https://latest-swc.cdn.skype.com/sdk/v1/sdk.min.js"></script>
 <!-- Parallax/Navbar -->
-  <div class="parallax"  style="background-image: url(img/mosaic.JPG);" >
+  <div id="parallax1" class="parallax"  style="background-image: url(img/mosaic.JPG);" >
 
     <nav class="topnav" id="myTopnav">
       <a href="">Home</a>
@@ -89,7 +89,7 @@
           }
       </script>
 
-    <div id= "welcome" style="text-align: center; position: absolute; left:0; width:100%; top:50%;">
+    <div id="welcome">
       <p id="welcometext" style="opacity: 1; position: absolute; left:0; right:0; text-transform:uppercase; background-color:#282E34; width:250px; text-align: center; font-size: 30px; letter-spacing: 10px; padding: 20px; margin:0 auto">welcome</p>
     </div>
 
@@ -107,7 +107,7 @@
   </div>
 
 <!-- Parallax/Moon -->
-  <div id="moon" class="parallax" style="background-image: url(img/moon4.JPG);">
+  <div id="parallax2" class="parallax" style="background-image: url(img/moon4.JPG);">
     <div style="position: relative; left:50px; top:100px; width:40%;">
       <p id="moontext">
         "I am the Alpha and the Omega,
@@ -260,7 +260,7 @@
 
 
 <!-- Parallax -->
-  <div class="parallax" style="background-image: url(img/beach.JPG);">
+  <div id="parallax3" class="parallax" style="background-image: url(img/beach.JPG);">
   </div>
 <!-- Footer -->
   <footer class="footer">
