Fixed padding issue causing white space

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
 <!-- Skype Bot -->
-  <div class="skype-button bubble " data-bot-id="2c2a7e41-040a-4fcd-b10a-2480ac3c488e"></div>
+  <div id="skype" data-css-url:"css/stylesheet.css;" data-css-url data-bot-id="2c2a7e41-040a-4fcd-b10a-2480ac3c488e"></div>
   <script src="https://latest-swc.cdn.skype.com/sdk/v1/sdk.min.js"></script>
 <!-- Parallax/Navbar -->
   <div id="parallax1" class="parallax"  style="background-image: url(img/mosaic.JPG);" >
@@ -290,7 +290,7 @@
       <!--Mobile-->
       <tr>
         <td id="mobile">
-          <ul style="margin: 0 auto; width: 400px; padding: 20px;">
+          <ul style="margin: 0 auto; width: 100%; padding: 20px;">
             <li class="footer" style="width:100%"><h4>You can contact me here</h4></li>
             <li class="footer" style="width:100%"><h4><img id="icon" src="img/location2.png">Orlando, FL</h4></li>
             <li class="footer" style="width:100%"><h4><img id="icon" src="img/phone2.png"><a style="color:dodgerblue" href="tel:">1-407-407-0000</h4></a></li>
