--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
 <!-- Skype Bot -->
-  <div id="skype" data-css-url:"css/stylesheet.css;" data-css-url data-bot-id="2c2a7e41-040a-4fcd-b10a-2480ac3c488e"></div>
+  <div class="skype-button bubble" data-bot-id="2c2a7e41-040a-4fcd-b10a-2480ac3c488e"></div>
   <script src="https://latest-swc.cdn.skype.com/sdk/v1/sdk.min.js"></script>
 <!-- Parallax/Navbar -->
   <div id="parallax1" class="parallax"  style="background-image: url(img/mosaic.JPG);" >
