Added mobile-optimized images

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
 
 <!-- Parallax -->
-  <div id="parallax3" class="parallax" style="background-image: url(img/beach.JPG);">
+  <div id="parallax3" class="parallax" style="background-image: url(img/blur.JPG);">
   </div>
 <!-- Footer -->
   <footer class="footer">
