--- a/about/index.html
+++ b/about/index.html
@@ -33,101 +33,48 @@
 
 
 <!-- Content -->
-<div style="height:100%; width:100%; background-color:#282E34;">
-    <h1 id="About_header"style="top:100px; position: absolute; margin:0 0 0 50px">About</h1>
-</div>
-
-
-
+  <div style="height:100%; width:100%; background-color:#282E34;">
+      <h1 id="About_header"style="top:100px; position: absolute; margin:0 0 0 50px">About</h1>
+  </div>
 <!-- Footer -->
-<footer>
-  <div class="footerMain">
-    
-    
-    <table>
-      <tbody>
-        <tr>
-          <td class="footer">
-            <ul style="list-style: none; float:left; margin:0">
-              <li><h1 style="margin:0; width:fit-content; text-align: left">Contact Me</h1></li>
-              <br>
-              <li class="footer1"><a href=""><img src="../img/twitter.svg" style="height: 32px;width: 32px"></a></li>
-              <li class="footer1"><a href=""><img src="../img/facebook.svg" style="height: 32px;width: 32px"></a></li>
-              <li class="footer1"><a href=""><img src="../img/instagram.svg" style="height: 32px;width: 32px"></a></li>
-              <li class="footer1"><a href=""><img src="../img/googleplus.svg" style="height: 32px;width: 32px"></a></li>
-              <li class="footer1"><a href=""><img src="../img/youtube.svg" style="height: 32px;width: 32px"></a></li>
-            </ul>
-          </td>
+  <footer class="footer">
+    <table class="footer" cellspacing="0" cellpadding="0">
 
-          <td>
-            <table>
-              <tbody>
-                <tr>
-                  <td>
-                      <ul style="margin:0; float:right">
-                      <li class="footer2"><img src="../img/phone2.png" style="height: 20px; width: 20px;"></li>
-                      <li class="footer2"><img src="../img/mail2.png" style="height: 20px; width: 20px;"></li>
-                    </ul>
-                  </td>
+      <tr>
+        <td>
+          <p class="footer">SOCIAL</p>
+          <ul class="footer">
+            <li class="footer"><a  class="footer" href="https://www.facebook.com/"> <img src="../img/facebook.svg" alt="" width="50px" height="50px"></li>
+            <li class="footer"><a  class="footer" href="https://twitter.com/"> <img src="../img/twitter.svg" alt="" width="50px" height="50px"></li>
+            <li class="footer"><a class="footer" href="https://plus.google.com/+"> <img src="../img/googleplus.svg" alt="" width="50px" height="50px"></li>
+            <li class="footer"><a class="footer" href="https://www.instagram.com//"> <img src="../img/instagram.svg" alt="" width="50px" height="50px"></li>
+            <li class="footer"><a class="footer" href="https://www.youtube.com/"> <img src="../img/youtube.svg" alt="" width="50px" height="50px"></li>
+          </ul>
+        </td>
 
-                  <td>
-                    <ul style="margin:0; float:right; padding-left: 0;">
-                        <li class="footer2"><a style="text-decoration: none; color:dodgerblue" href="tel:407-367-5309">Phone:407-367-5309</a></li>
-                        <li class="footer2"><a style="text-decoration: none; color:dodgerblue" href="mailto:example@gmail.com">example@gmail.com</a></li>
-                      </ul>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </td>
-        </tr>
-      </tbody>
+        <!--Desktop-->
+        <td id="desktop">
+            <h4>You can contact me here</h4>
+            <h4><img id="icon" src="../img/location2.png">Orlando, FL</h4>
+            <h4><img id="icon" src="../img/phone2.png"><a style="color:dodgerblue" href="tel:">1-407-407-0000</h4></a></li>
+            <h4><img id="icon" src="../img/mail2.png"><a style="color:dodgerblue" href="mailto:">shotgunsam419@gmail.com</a></h4>
+        </td>
+      </tr>
+
+      <!--Mobile-->
+      <tr>
+        <td id="mobile">
+          <ul style="margin: 0 auto; width: 100%; padding: 20px;">
+            <li class="footer" style="width:100%"><h4>You can contact me here</h4></li>
+            <li class="footer" style="width:100%"><h4><img id="icon" src="../img/location2.png">Orlando, FL</h4></li>
+            <li class="footer" style="width:100%"><h4><img id="icon" src="../img/phone2.png"><a style="color:dodgerblue" href="tel:">1-407-407-0000</h4></a></li>
+            <li class="footer" style="width:100%"><h4><img id="icon" src="../img/mail2.png"><a style="color:dodgerblue" href="mailto:">
+              shotgunsam419@gmail.com</a></h4></li>
+          </ul>
+        </td>
+      </tr>
     </table>
-  </div>
 
-  <div class="footerMobile">
-    <table>
-      <tbody>
-        <tr>
-          <td class="footer">
-            <ul style="list-style: none; width:100%;">
-              <li><h1 style="width:fit-content;">Contact Me</h1></li>
-              <br>
-              <li class="footer3"><a href=""><img src="../img/twitter.svg" style="height: 32px;width: 32px"></a></li>
-              <li class="footer3"><a href=""><img src="../img/facebook.svg" style="height: 32px;width: 32px"></a></li>
-              <li class="footer3"><a href=""><img src="../img/instagram.svg" style="height: 32px;width: 32px"></a></li>
-              <li class="footer3"><a href=""><img src="../img/googleplus.svg" style="height: 32px;width: 32px"></a></li>
-              <li class="footer3"><a href=""><img src="../img/youtube.svg" style="height: 32px;width: 32px"></a></li>
-            </ul>
-          </td>
-
-        <tr>
-          <td>
-            <table>
-              <tbody>
-                <tr>
-                  <td>
-                      <ul style="margin:0;">
-                      <li class="footer2"><img src="../img/phone2.png" style="height: 20px; width: 20px;"></li>
-                      <li class="footer2"><img src="../img/mail2.png" style="height: 20px; width: 20px;"></li>
-                    </ul>
-                  </td>
-
-                  <td>
-                    <ul style="margin:0; float:left; padding-left:0px;">
-                        <li class="footer2"><a style="text-decoration: none; color:dodgerblue" href="tel:407-367-5309">Phone:407-367-5309</a></li>
-                        <li class="footer2"><a style="text-decoration: none; color:dodgerblue" href="mailto:example@gmail.com">example@gmail.com</a></li>
-                      </ul>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </td>
-        </tr>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</footer>
+  </footer>
 </body>
 </html>
