Updated about page

--- a/about/index.html
+++ b/about/index.html
@@ -35,6 +35,18 @@
 <!-- Content -->
   <div style="height:100%; width:100%; background-color:#282E34;">
       <h1 id="About_header"style="top:100px; position: absolute; margin:0 0 0 50px">About</h1>
+      <p>This is simply a template site created for my portfolio</p>
+      <br>
+      <h2>Some concepts that you'll see here</h2>
+      <ul>
+        <li>Implementation of parallax effect</li>
+        <li>Usage of google fonts</li>
+        <li>Javascript based slide show with buttons</li>
+        <li>Mobile optimization</li>
+        <li>Dynamic elements</li>
+        <li>Media Queries</li>
+        <li>Flamebot2.0 project implemented</li>
+      </ul>
   </div>
 <!-- Footer -->
   <footer class="footer">
