--- a/contact/index.html
+++ b/contact/index.html
@@ -33,8 +33,8 @@
 
 
 <!-- Content -->
-  <div style="height:100%; width:100%; background-color:#282E34;">
-      <h1 id="About_header"style="top:100px; position: absolute; margin:0 0 0 50px">About</h1>
+  <div style="height:100%; width:50%; background-color:#282E34;">
+      <h1 id="About_header"style="top:100px; position: absolute; margin:0 0 0 50px">Contact</h1>
   </div>
 <!-- Footer -->
   <footer class="footer">
