--- a/photos/index.html
+++ b/photos/index.html
@@ -34,7 +34,7 @@
 
 <!-- Content -->
   <div style="height:100%; width:100%; background-color:#282E34;">
-      <h1 id="About_header"style="top:100px; position: absolute; margin:0 0 0 50px">About</h1>
+      <h1 id="About_header"style="top:100px; position: absolute; margin:0 0 0 50px">Photos</h1>
   </div>
 
 
