Changed slide show photos

--- a/about/index.html
+++ b/about/index.html
@@ -34,7 +34,11 @@
 
 <!-- Content -->
   <div style="height:100%; width:100%; background-color:#282E34;">
-      <h1 id="About_header"style="top:100px; position: absolute; margin:0 0 0 50px">About</h1>
+      <div style="height:90px; width:100%; background-color:#282E34;"></div>
+    <div style="padding-left:50px;">
+      <h1 id="About_header">About</h1>
+    </div>
+    <div style="padding-left:50px;">
       <p>This is simply a template site created for my portfolio</p>
       <br>
       <h2>Some concepts that you'll see here</h2>
@@ -45,8 +49,10 @@
         <li>Mobile optimization</li>
         <li>Dynamic elements</li>
         <li>Media Queries</li>
-        <li>Flamebot2.0 project implemented</li>
+        <li>Usage of both inline and external style sheets</li>
+        <li>Implementation of Microsoft bot</li>
       </ul>
+    </div>
   </div>
 <!-- Footer -->
   <footer class="footer">
