--- a/contact/index.html
+++ b/contact/index.html
@@ -33,9 +33,13 @@
 
 
 <!-- Content -->
-  <div style="height:100%; width:50%; background-color:#282E34;">
-      <h1 id="About_header"style="top:100px; position: absolute; margin:0 0 0 50px">Contact</h1>
+  <div style="height:65%; width:100%; background-color:#282E34;">
+      <div style="height:90px; width:100%; background-color:#282E34;"></div>
+      <h1  style="padding-left:50px;" id="About_header">Contact</h1>
   </div>
+
+
+
 <!-- Footer -->
   <footer class="footer">
     <table class="footer" cellspacing="0" cellpadding="0">
@@ -74,6 +78,7 @@
         </td>
       </tr>
     </table>
+
   </footer>
 </body>
 </html>
