--- a/photos/index.html
+++ b/photos/index.html
@@ -34,10 +34,12 @@
 
 <!-- Content -->
   <div style="height:100%; width:100%; background-color:#282E34;">
-      <h1 id="About_header"style="top:100px; position: absolute; margin:0 0 0 50px">Photos</h1>
+    <div style="height:90px; width:100%; background-color:#282E34;"></div>
+    <h1 style="padding-left:50px;" id="About_header">Photos</h1>
+    <ul style="padding-left:80px;">
+      <li >Photos used in parallax effect were taken by myself</li>
+    </ul>
   </div>
-
-
 
 <!-- Footer -->
   <footer class="footer">
