--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
   <div style="background-color: #282E34; height: 100px;"></div>
   <div style="background-color: #282E34;">
     <div class="w3-content w3-display-container" style="height:350px; overflow:hidden">
-      <img class="mySlides" src="img/img_nature_wide.jpg" style="z-Index:3">
-      <img class="mySlides" src="img/img_fjords_wide.jpg" style="z-Index:2">
-      <img class="mySlides" src="img/img_mountains_wide.jpg" style="z-Index:1">
+      <img class="mySlides" src="img/IMG_0911.JPG" style="z-Index:3">
+      <img class="mySlides" src="img/IMG_0810.JPG" style="z-Index:2">
+      <img class="mySlides" src="img/IMG_0819.PNG" style="z-Index:1">
       
     <!-- Slide Show Buttons -->
       <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%; z-index:4;">
