--- a/photos/index.html
+++ b/photos/index.html
@@ -37,7 +37,7 @@
     <div style="height:90px; width:100%; background-color:#282E34;"></div>
     <h1 style="padding-left:50px;" id="About_header">Photos</h1>
     <ul style="padding-left:80px;">
-      <li >Photos used in parallax effect were taken by myself</li>
+      <li >All photos were taken by myself</li>
     </ul>
   </div>
 
@@ -62,7 +62,7 @@
             <h4>You can contact me here</h4>
             <h4><img id="icon" src="../img/location2.png">Orlando, FL</h4>
             <h4><img id="icon" src="../img/phone2.png"><a style="color:dodgerblue" href="tel:">1-407-407-0000</h4></a></li>
-            <h4><img id="icon" src="../img/mail2.png"><a style="color:dodgerblue" href="mailto:">shotgunsam419@gmail.com</a></h4>
+            <h4><img id="icon" src="../img/mail2.png"><a style="color:dodgerblue" href="mailto:">email@gmail.com</a></h4>
         </td>
       </tr>
 
@@ -73,8 +73,7 @@
             <li class="footer" style="width:100%"><h4>You can contact me here</h4></li>
             <li class="footer" style="width:100%"><h4><img id="icon" src="../img/location2.png">Orlando, FL</h4></li>
             <li class="footer" style="width:100%"><h4><img id="icon" src="../img/phone2.png"><a style="color:dodgerblue" href="tel:">1-407-407-0000</h4></a></li>
-            <li class="footer" style="width:100%"><h4><img id="icon" src="../img/mail2.png"><a style="color:dodgerblue" href="mailto:">
-              shotgunsam419@gmail.com</a></h4></li>
+            <li class="footer" style="width:100%"><h4><img id="icon" src="../img/mail2.png"><a style="color:dodgerblue" href="mailto:">email@gmail.com</a></h4></li>
           </ul>
         </td>
       </tr>
