--- a/contact/index.html
+++ b/contact/index.html
@@ -35,7 +35,8 @@
 <!-- Content -->
   <div style="height:65%; width:100%; background-color:#282E34;">
       <div style="height:90px; width:100%; background-color:#282E34;"></div>
-      <h1  style="padding-left:50px;" id="About_header">Contact</h1>
+      <h1 style="padding-left:50px;" id="About_header">Contact</h1>
+      <a style="padding-left:80px;" href="github.com/shotgunsam419" target="_blank">Github</a>
   </div>
 
 
@@ -61,7 +62,7 @@
             <h4>You can contact me here</h4>
             <h4><img id="icon" src="../img/location2.png">Orlando, FL</h4>
             <h4><img id="icon" src="../img/phone2.png"><a style="color:dodgerblue" href="tel:">1-407-407-0000</h4></a></li>
-            <h4><img id="icon" src="../img/mail2.png"><a style="color:dodgerblue" href="mailto:">shotgunsam419@gmail.com</a></h4>
+            <h4><img id="icon" src="../img/mail2.png"><a style="color:dodgerblue" href="mailto:">email@gmail.com</a></h4>
         </td>
       </tr>
 
@@ -72,8 +73,7 @@
             <li class="footer" style="width:100%"><h4>You can contact me here</h4></li>
             <li class="footer" style="width:100%"><h4><img id="icon" src="../img/location2.png">Orlando, FL</h4></li>
             <li class="footer" style="width:100%"><h4><img id="icon" src="../img/phone2.png"><a style="color:dodgerblue" href="tel:">1-407-407-0000</h4></a></li>
-            <li class="footer" style="width:100%"><h4><img id="icon" src="../img/mail2.png"><a style="color:dodgerblue" href="mailto:">
-              shotgunsam419@gmail.com</a></h4></li>
+            <li class="footer" style="width:100%"><h4><img id="icon" src="../img/mail2.png"><a style="color:dodgerblue" href="mailto:">email@gmail.com</a></h4></li>
           </ul>
         </td>
       </tr>
