--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             <h4>You can contact me here</h4>
             <h4><img id="icon" src="img/location2.png">Orlando, FL</h4>
             <h4><img id="icon" src="img/phone2.png"><a style="color:dodgerblue" href="tel:">1-407-407-0000</h4></a></li>
-            <h4><img id="icon" src="img/mail2.png"><a style="color:dodgerblue" href="mailto:">shotgunsam419@gmail.com</a></h4>
+            <h4><img id="icon" src="img/mail2.png"><a style="color:dodgerblue" href="mailto:">email@gmail.com</a></h4>
         </td>
       </tr>
 
@@ -294,8 +294,7 @@
             <li class="footer" style="width:100%"><h4>You can contact me here</h4></li>
             <li class="footer" style="width:100%"><h4><img id="icon" src="img/location2.png">Orlando, FL</h4></li>
             <li class="footer" style="width:100%"><h4><img id="icon" src="img/phone2.png"><a style="color:dodgerblue" href="tel:">1-407-407-0000</h4></a></li>
-            <li class="footer" style="width:100%"><h4><img id="icon" src="img/mail2.png"><a style="color:dodgerblue" href="mailto:">
-              shotgunsam419@gmail.com</a></h4></li>
+            <li class="footer" style="width:100%"><h4><img id="icon" src="img/mail2.png"><a style="color:dodgerblue" href="mailto:">email@gmail.com</a></h4></li>
           </ul>
         </td>
       </tr>
