Added News Site

--- a/contact/index.html
+++ b/contact/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Shotgunsam419</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <META NAME="robots" CONTENT="noindex,nofollow">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link rel="stylesheet" href="../css/stylesheet.css">
@@ -15,6 +16,7 @@
         <a href="../photos/index.html">Photos</a>
         <a href="../about/index.html">About</a>
         <a href="../contact/index.html">Contact</a>
+        <a href="../alt/index.html">Alt Site</a>
         <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction();">&#9776;</a>
     </nav>
     <script>
@@ -33,16 +35,16 @@
 
 
 <!-- Content -->
-  <div style="height:65%; width:100%; background-color:#282E34;">
+  <div style="height:75%; width:100%; background-color:#282E34;">
       <div style="height:90px; width:100%; background-color:#282E34;"></div>
       <h1 style="padding-left:50px;" id="About_header">Contact</h1>
-      <a style="padding-left:80px;" href="github.com/shotgunsam419" target="_blank">Github</a>
+      <a style="padding-left:80px;" href="https://github.com/shotgunsam419" target="_blank">Github</a>
   </div>
 
 
 
 <!-- Footer -->
-  <footer class="footer">
+  <footer class="footer" style="height:25%">
     <table class="footer" cellspacing="0" cellpadding="0">
 
       <tr>
