--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Shotgunsam419</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <META NAME="robots" CONTENT="noindex,nofollow">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
   <link rel="stylesheet" href="css/stylesheet.css">
@@ -37,10 +38,11 @@
   <div id="parallax1" class="parallax"  style="background-image: url(img/mosaic.JPG);" >
 
     <nav class="topnav" id="myTopnav">
-      <a href="">Home</a>
+      <a href="">Home</a> 
       <a href="photos/index.html">Photos</a>
       <a href="about/index.html">About</a>
       <a href="contact/index.html">Contact</a>
+      <a href="alt/index.html">Alt Site</a>
       <a href="javascript:void(0);" style="font-size:25px;" class="icon" onclick="myFunction();">&#9776;</a>
   </nav>
 
@@ -98,17 +100,17 @@
 <!-- Quote  -->
   <div style="background-color: white; padding: 80px 50px; line-height: 30px;">
     <h1 style="text-align: center; color: #444; text-transform: uppercase;">The Road Not Taken</h1>
-    <pre id="quote" style="text-align: center; vertical-align: middle; margin: 0 auto; font-size: 20px; color: #777">
+    <p id="quote" style="text-align: center; width:40%; white-space:pre-line; margin: 0 auto; font-size: 20px; color: #777">
       "I shall be telling this with a sigh
       Somewhere ages and ages hence:
       Two roads diverged in a wood, and I—
       I took the one less traveled by,
-      And that has made all the difference."</pre>
+      And that has made all the difference."</p>
   </div>
 
 <!-- Parallax/Moon -->
   <div id="parallax2" class="parallax" style="background-image: url(img/moon4.JPG);">
-    <div style="position: relative; left:50px; top:100px; width:40%;">
+    <div style="position: relative; left:50px; top:100px; width:50%;">
       <p id="moontext">
         "I am the Alpha and the Omega,
           the First and the Last,
