--- a/about/index.html
+++ b/about/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Shotgunsam419</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <META NAME="robots" CONTENT="noindex,nofollow">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link rel="stylesheet" href="../css/stylesheet.css">
@@ -15,6 +16,7 @@
         <a href="../photos/index.html">Photos</a>
         <a href="../about/index.html">About</a>
         <a href="../contact/index.html">Contact</a>
+        <a href="alt/index.html">Alt Site</a>
         <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction();">&#9776;</a>
     </nav>
     <script>
