--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
 </head>
 
 <body>
-<!-- Skype Bot -->
-  <div class="skype-button bubble" data-bot-id="2c2a7e41-040a-4fcd-b10a-2480ac3c488e"></div>
-  <script src="https://latest-swc.cdn.skype.com/sdk/v1/sdk.min.js"></script>
+
 <!-- Parallax/Navbar -->
   <div id="parallax1" class="parallax"  style="background-image: url(img/mosaic.JPG);" >
 
@@ -102,7 +100,7 @@
     <h1 style="text-align: center; color: #444; text-transform: uppercase;">The Road Not Taken</h1>
     <p id="quote" style="text-align: center; width:40%; white-space:pre-line; margin: 0 auto; font-size: 20px; color: #777">
       "I shall be telling this with a sigh
-      Somewhere ages and ages hence:
+      Somewhere ages and ages hence
       Two roads diverged in a wood, and I—
       I took the one less traveled by,
       And that has made all the difference."</p>
@@ -260,11 +258,14 @@
   <div style="background-color: #282E34; height: 100px;"></div>
 
 
-
+<!-- Skype Bot -->
+<span class="skype-button bubble " data-bot-id="2c2a7e41-040a-4fcd-b10a-2480ac3c488e"></span>
+<script src="https://swc.cdn.skype.com/sdk/v1/sdk.min.js"></script>
 <!-- Parallax -->
   <div id="parallax3" class="parallax" style="background-image: url(img/blur.JPG);">
   </div>
-<!-- Footer -->
+
+  <!-- Footer -->
   <footer class="footer">
     <table class="footer" cellspacing="0" cellpadding="0">
 
