Updated unused css file

--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
   <title>Shotgunsam419</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <META NAME="robots" CONTENT="noindex,nofollow">
+  <meta name="robots" content="noindex, nofollow">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-  <link rel="stylesheet" href="css/stylesheet.css">
 
   <!-- Async Script -->
     <noscript id="deferred-styles">
-      <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
+      <link rel="stylesheet" type="text/css" href="css/stylesheet.css"/>
       <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     </noscript>
