--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
 
 <body>
 <!-- Parallax/Navbar -->
-  <div id="parallax1" class="parallax"  style="height:110%; background-image: url(img/mosaic.JPG);" >
+  <div id="parallax1" class="parallax" style="height:110%; background-image: url(img/mosaic.JPG);" >
+    <p style="color:white; height:110%; z-index: -599;"> loading </p>
 
     <nav class="topnav" id="myTopnav">
       <a href="">Home</a> 
