--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <body>
 <!-- Parallax/Navbar -->
   <div id="parallax1" class="parallax" style=" z-index: 1; height:110%; background-image: url(img/mosaic.JPG);" >
-    <p style="color:white; height:110%; z-index: -599; position: absolute;"> loading </p>
+    <!--p style="color:white; height:110%; z-index: -599; position: absolute;"> loading </p-->
 
     <nav class="topnav" id="myTopnav">
       <a href="">Home</a> 
