Fixed bottom of footer

--- a/contact/index.html
+++ b/contact/index.html
@@ -44,7 +44,7 @@
 
 
 <!-- Footer -->
-  <footer class="footer" style="height:25%">
+  <footer class="footer">
     <table class="footer" cellspacing="0" cellpadding="0">
 
       <tr>
