--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       </script>
 
     <div id="welcome">
-      <p id="welcometext" style="opacity: 1; position: absolute; left:0; right:0; text-transform:uppercase; background-color:#282E34; width:250px; text-align: center; font-size: 30px; letter-spacing: 10px; padding: 20px; margin:0 auto">welcome</p>
+      <p id="welcometext">welcome</p>
     </div>
 
   </div>
