--- a/photos/index.html
+++ b/photos/index.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
 <html>
 <head>
-  <title>Shotgunsam419</title>
+  <title>Welcome</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <META NAME="robots" CONTENT="noindex,nofollow">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
