Updated Github link

--- a/contact/index.html
+++ b/contact/index.html
@@ -38,7 +38,7 @@
   <div style="height:75%; width:100%; background-color:#282E34;">
       <div style="height:90px; width:100%; background-color:#282E34;"></div>
       <h1 style="padding-left:50px;" id="About_header">Contact</h1>
-      <a style="padding-left:80px;" href="https://github.com/shotgunsam419" target="_blank">Github</a>
+      <a style="padding-left:80px;" href="https://github.com/jasondhillon" target="_blank">Github</a>
   </div>
 
 
