Fixed alt site link

--- a/photos/index.html
+++ b/photos/index.html
@@ -16,7 +16,7 @@
         <a href="../photos/index.html">Photos</a>
         <a href="../about/index.html">About</a>
         <a href="../contact/index.html">Contact</a>
-        <a href="alt/index.html">Alt Site</a>
+        <a href="../alt/index.html">Alt Site</a>
         <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction();">&#9776;</a>
     </nav>
     <script>
