Fixed mislabeled title

--- a/website/index.html
+++ b/website/index.html
@@ -177,13 +177,13 @@
 
     <!-- Project -->
     <div style="padding-left:80px">
-      <h2 id="About_header">Full Stack Contact Manager</h2>
+      <h2 id="About_header">UCF Dollar Menu</h2>
       <video style="width: 70%;" controls muted>
         <source src="../projects/Dollar.mp4">
       </video>
       <ul id="quote" style="color: whitesmoke; padding-left:80px; padding-top: 15px;padding-bottom: 15px; margin: 0; width:unset; text-align: left;">
         <li>Full-stack MERN website, using MongoDB, Express, React/Redux, and Node.js</li>
-        <li>Shows cheap food found around the campus of UCF</li>
+        <li>Shows cheap food for college students that is within walking distance from the college campus</li>
         <li>Features open-source map Leaflet</li>
         <li>Includes swagger ran from the same server</li>
         <li>Uses React Native to create a mobile app of the site</li>
