Added more information on swagger

--- a/website/index.html
+++ b/website/index.html
@@ -185,7 +185,7 @@
         <li>Full-stack MERN website, using MongoDB, Express, React/Redux, and Node.js</li>
         <li>Shows cheap food for college students that is within walking distance from the college campus</li>
         <li>Features open-source map Leaflet</li>
-        <li>Includes swagger ran from the same server</li>
+        <li>Includes Swagger API tester ran from the same server</li>
         <li>Uses React Native to create a mobile app of the site</li>
         <li><a href="https://github.com/Jasondhillon/ucfdollarmenu">Github</a></li>
       </ul>
