Fixed Type: facilitate

--- a/java/index.html
+++ b/java/index.html
@@ -190,7 +190,7 @@
     <img style="padding-bottom: 15px;  display:block" src="../projects/project3/1.jpg"/>
     <img src="../projects/project3/2.jpg"/>
     <ul id="quote" style="color: whitesmoke; padding-left:80px; padding-top: 15px;padding-bottom: 15px; margin: 0; width:unset; text-align: left;">
-      <li>Java GUI made to help faciliate MySQL queries</li>
+      <li>Java GUI made to help facilitate MySQL queries</li>
       <li>Allows for the driver and url to be selected through dropdown</li>
       <li>SQL queries are shown below the command box</li>
       <li>[No Github link as the repository is private]</li>
