--- a/java/index.html
+++ b/java/index.html
@@ -198,7 +198,7 @@
   </div>
   <!-- Project -->
   <div style="padding-left:80px">
-    <h2 id="About_header">SQL Web ClientI</h2>
+    <h2 id="About_header">SQL Web Client</h2>
     <img style="padding-bottom: 15px; display:block" src="../projects/project4/d.png"/>
     <img style="padding-bottom: 15px; display:block" src="../projects/project4/e.png"/>
     <img style="padding-bottom: 15px; display:block;" src="../projects/project4/f.png"/>
