--- a/java/index.html
+++ b/java/index.html
@@ -206,7 +206,7 @@
       <li>Three-Tier Distributed Web-Based Application for MySQL</li>
       <ul>
         <li>First-level utilizes JSP to allow the client to enter SQL commands and submit them to the server application processing</li>
-        <li>Second-tier servlet implements business logic to change supplier status baed on shipment record</li>
+        <li>Second-tier servlet implements business logic to change supplier status based on shipment record</li>
         <li>Third-tier is a persistent MySQL database</li>
       </ul>
       <li>[No Github link as the repository is private]</li>
