--- a/java/index.html
+++ b/java/index.html
@@ -221,7 +221,7 @@
     <ul id="quote" style="color: whitesmoke; padding-left:80px; padding-top: 15px;padding-bottom: 15px; margin: 0; width:unset; text-align: left;">
       <li>Uses synchronized/multiple threads through locks </li>
       <li>Withdrawal threads block if attempting to withdraw an amount greater than the bank balance</li>
-      <li>Deposit threads signal the withdrawal threads once money is deposited</li>
+      <li>Deposit threads signal the withdrawal threads once the money is deposited</li>
       <li>[No Github link as the repository is private]</li>
     </ul>
   </div>
